--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,61 @@
 {
-    "ansible.python.interpreterPath": "/home/abraxas/Documents/Projects/kali-ansible-setup/venv/bin/python",
-    "cSpell.words": [
-        "Abra",
-        "autoclean",
-        "autoremove",
-        "burpsuite",
-        "chdir",
-        "dotfiles",
-        "ensurepath",
-        "jython",
-        "lineinfile",
-        "mimikatz",
-        "noqa",
-        "pacman",
-        "pipx",
-        "pspy",
-        "rockyou",
-        "splitext",
-        "updatedb",
-        "VIRTUALENV",
-        "wordlists",
-        "xfce"
-    ],
-    "editor.insertSpaces": false,
-    "files.associations": {
-        "*.env": "env",
-        "*.yml": "ansible"
-    },
-    "files.exclude": {
-        ".git": true
-    },
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "git.branchProtection": [
-        "main"
-    ],
-    "git.branchProtectionPrompt": "alwaysCommitToNewBranch",
-    "git.branchRandomName.enable": true,
-    "git.ignoreLimitWarning": true,
-    "git.mergeEditor": false,
-    "git.pullBeforeCheckout": true
+	"ansible.python.interpreterPath": "/home/abraxas/Documents/Projects/kali-ansible-setup/venv/bin/python",
+	"cSpell.words": [
+		"Abra",
+		"autoclean",
+		"autoremove",
+		"burpsuite",
+		"chdir",
+		"dotfiles",
+		"ensurepath",
+		"jython",
+		"lineinfile",
+		"mimikatz",
+		"noqa",
+		"pacman",
+		"pipx",
+		"pspy",
+		"rockyou",
+		"splitext",
+		"updatedb",
+		"VIRTUALENV",
+		"wordlists",
+		"xfce"
+	],
+	"editor.insertSpaces": false,
+	"files.associations": {
+		"*.env": "env",
+		"*.yml": "ansible"
+	},
+	"files.exclude": {
+		".git": true
+	},
+	"files.insertFinalNewline": true,
+	"files.trimTrailingWhitespace": true,
+	"git.branchProtection": ["main"],
+	"git.branchProtectionPrompt": "alwaysCommitToNewBranch",
+	"git.branchRandomName.enable": true,
+	"git.ignoreLimitWarning": true,
+	"git.mergeEditor": false,
+	"git.pullBeforeCheckout": true,
+	"workbench.colorCustomizations": {
+		"activityBar.activeBackground": "#fbed80",
+		"activityBar.background": "#fbed80",
+		"activityBar.foreground": "#15202b",
+		"activityBar.inactiveForeground": "#15202b99",
+		"activityBarBadge.background": "#06b9a5",
+		"activityBarBadge.foreground": "#15202b",
+		"commandCenter.border": "#15202b99",
+		"sash.hoverBorder": "#fbed80",
+		"statusBar.background": "#f9e64f",
+		"statusBar.foreground": "#15202b",
+		"statusBarItem.hoverBackground": "#f7df1e",
+		"statusBarItem.remoteBackground": "#f9e64f",
+		"statusBarItem.remoteForeground": "#15202b",
+		"titleBar.activeBackground": "#f9e64f",
+		"titleBar.activeForeground": "#15202b",
+		"titleBar.inactiveBackground": "#f9e64f99",
+		"titleBar.inactiveForeground": "#15202b99"
+	},
+	"peacock.remoteColor": "#f9e64f"
 }
