Update ReadMe instructions

--- a/hosts.ini
+++ b/hosts.ini
@@ -3,3 +3,5 @@ localhost			ansible_user=kali	ansible_connection=local
 [vms]
 kali.vm				ansible_user=kali		ansible_become_password='kali'
 ansible_test.vm 	ansible_host=192.168.253.138		ansible_user=kali		ansible_become_password='kali'	ansible_connection=ssh ansible_ssh_user=kali ansible_ssh_pass=kali
+[prt_fwd]
+kali.fwd			ansible_host=localhost			ansible_port=2222		ansible_user=kali		ansible_become_password='kali'	ansible_connection=ssh ansible_ssh_user=kali ansible_ssh_pass=kali
