Add Pipenv for simpler setup

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,11 @@ repos:
       - id: detect-private-key
 
   # Ansible hooks
-  - repo: https://github.com/ansible/ansible-lint.git
-    rev: v6.22.1
+  - repo: local
     hooks:
       - id: ansible-lint
+        name: verify w/ ansible-lint
+        entry: pipenv run ansible-lint
+        language: system
+        # types: [file]
+        files: \\.(yml|yaml)$
