--- a/roles/install_tools/tasks/install_cargo.yml
+++ b/roles/install_tools/tasks/install_cargo.yml
@@ -19,6 +19,12 @@
       args:
         creates: "{{ cargo_dir }}"
 
+- name: Set PATH for cargo
+  set_fact:
+    cargo_path: "/home/kali/.cargo/bin/cargo"
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ cargo_path }}"
+
 - name: Install cargo packages
   community.general.cargo:
     name: "{{ item }}"
