--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,13 +13,13 @@ repos:
       - id: check-yaml
       - id: detect-private-key
 
-  # - repo: https://github.com/adrienverge/yamllint.git
-  #   rev: v1.35.1
-  #   hooks:
-  #     - id: yamllint
-  #       files: \.(yaml|yml)$
-  #       types: [file, yaml]
-  #       entry: yamllint --strict -f parsable
+  - repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.35.1
+    hooks:
+      - id: yamllint
+        files: \.(yaml|yml)$
+        types: [file, yaml]
+        entry: yamllint --strict -f parsable
 
   # # Ansible hooks
   # - repo: local
