--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,10 +1,12 @@
+---
 # .github/workflows/ansible-lint.yml
 name: ansible-lint
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ["main", "stable"]
   push:
-  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
+  workflow_dispatch:
+  # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
 jobs:
   build:
     name: Ansible Lint
