Fix yamllint issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: yamllint
         files: \.(yaml|yml)$
         types: [file, yaml]
-        entry: yamllint --strict -f parsable
+        entry: yamllint --strict -f auto
 
   # # Ansible hooks
   # - repo: local
