--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,5 +1,5 @@
 ---
-extends: default
+extends: relaxed
 
 rules:
   line-length: disable
@@ -9,6 +9,9 @@ rules:
   truthy:
     allowed-values: ["true", "false"]
     check-keys: true
+
+  # document-start:
+  #   present: false
 
   # comments:
   #   min-spaces-from-content: 1
