--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -1,7 +1,7 @@
 ---
 # .github/workflows/ansible-lint.yml
 name: ansible-lint
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   pull_request:
     branches: ["main", "stable"]
   push:
@@ -12,6 +12,14 @@ jobs:
     name: Ansible Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Sources
+        uses: actions/checkout@v4
+
+      - name: Install Ansible
+        run: sudo apt install -y ansible
+
+      - name: Install Ansible Colletion requirements
+        run: ansible-galaxy install -r requirements.yaml
+
       - name: Run ansible-lint
         uses: ansible/ansible-lint@main
