Add new tools for installation

--- a/roles/install_tools/tasks/install_tools_apt.yml
+++ b/roles/install_tools/tasks/install_tools_apt.yml
@@ -97,4 +97,9 @@
     - rlwrap
     # - tesseract-ocr
     - jd-gui
+    - zbar-tools
+    - gdb
+    - libreoffice
+    - getsploit
+    - sploitscan
 # noqa: package-latest
