Fix tasks for local run
Set missing environment variables due to lack of SSH connecion

--- a/roles/install_tools/tasks/install_cargo.yml
+++ b/roles/install_tools/tasks/install_cargo.yml
@@ -26,6 +26,8 @@
     PATH: "{{ ansible_env.PATH }}:{{ cargo_path }}"
 
 - name: Install cargo packages
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ cargo_path }}"
   community.general.cargo:
     name: "{{ item }}"
   loop: "{{ cargo_tools }}"
