--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -10,9 +10,9 @@ rules:
     allowed-values: ["true", "false"]
     check-keys: true
 
-  # document-start:
-  #   present: false
+  comments:
+    min-spaces-from-content: 1
 
-  # comments:
-  #   min-spaces-from-content: 1
-  comments-indentation: disable
+  octal-values:
+    forbid-implicit-octal: true
+    forbid-explicit-octal: true
