--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-# Ansible runtime and backups
-*.original
-*.tmp
-*.bkp
+# Created by https://www.toptal.com/developers/gitignore/api/ansible
+# Edit at https://www.toptal.com/developers/gitignore?templates=ansible
+
+### Ansible ###
 *.retry
-*.*~
 
-# Try tyo avoid any plain-text passwords
-*pwd*
-*pass*
-*password*
-*.txt
-
-# Exclude all binaries
-*.bin
-*.jar
-*.tar
-*.zip
-*.gzip
-*.tgz
+# End of https://www.toptal.com/developers/gitignore/api/ansible
 
 #venv
 venv/*
