--- a/roles/customizations/tasks/install_sublime.yml
+++ b/roles/customizations/tasks/install_sublime.yml
@@ -1,14 +1,27 @@
 # roles/customizations/tasks/install_sublime.yml
 ---
-- name: Add Sublime Text Key
-  ansible.builtin.apt_key:
+# ! apt-key is deprecated in newer debian installs. Work around -> Import the GPG key directly into /etc/apt/keyrings and reference it in the repository configuration.
+# - name: Add Sublime Text Key
+#   ansible.builtin.apt_key:
+#     url: https://download.sublimetext.com/sublimehq-pub.gpg
+#     state: present
+#
+# - name: Add Sublime Text repository
+#   ansible.builtin.apt_repository:
+#     repo: deb https://download.sublimetext.com/ apt/stable/
+#     state: present
+
+- name: Add Sublime Text GPG key
+  ansible.builtin.get_url:
     url: https://download.sublimetext.com/sublimehq-pub.gpg
-    state: present
+    dest: /etc/apt/keyrings/sublimehq-pub.gpg
+    mode: "0644"
 
 - name: Add Sublime Text repository
   ansible.builtin.apt_repository:
-    repo: deb https://download.sublimetext.com/ apt/stable/
+    repo: "deb [signed-by=/etc/apt/keyrings/sublimehq-pub.gpg] https://download.sublimetext.com/ apt/stable/"
     state: present
+    filename: sublime-text
 
 - name: Install Sublime Text
   ansible.builtin.apt:
