Fix cargo path installtion issues

--- a/roles/install_tools/tasks/install_cargo.yml
+++ b/roles/install_tools/tasks/install_cargo.yml
@@ -21,9 +21,9 @@
 
 - name: Set PATH for cargo
   ansible.builtin.set_fact:
-    cargo_path: "/home/kali/.cargo/bin/cargo"
-  environment:
-    PATH: "{{ ansible_env.PATH }}:{{ cargo_path }}"
+    cargo_path: "/home/kali/.cargo/bin/"
+  #environment:
+    #PATH: "{{ ansible_env.PATH }}:{{ cargo_path }}"
 
 - name: Install cargo packages
   environment:
