--- a/roles/install_tools/tasks/install_pipx.yml
+++ b/roles/install_tools/tasks/install_pipx.yml
@@ -1,9 +1,17 @@
 # roles/install_tools/tasks/install_pipx.yml
 ---
+# Redundant with new kali python installation configs
+#- name: Install pipx
+#  environment:
+#    PIP_REQUIRE_VIRTUALENV: "false"
+#  ansible.builtin.pip:
+#    name: pipx
+#    state: present
+
 - name: Install pipx
-  environment:
-    PIP_REQUIRE_VIRTUALENV: "false"
-  ansible.builtin.pip:
+  become: true
+  become_user: root
+  ansible.builtin.apt:
     name: pipx
     state: present
 
